cc: Fix animation bounds computation for multiple players

When one ElementAnimations has multiple AnimationPlayers, the
ElementAnimations can have an animation that inflates bounds without
every player having such an animation. This CL makes ElementAnimations
correctly handle this case, fixing a DCHECK that was previously
being hit in AnimationPlayer::TransformAnimationBoundsForBox.

BUG=675545
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2655993002
Cr-Commit-Position: refs/heads/master@{#447812}

Former-commit-id: bd39ee6aee08c93647e9174347d7926e58b11012